# nodadark

./: Cargo.toml  README.md  install.sh
crates/nodadark-desktop/: index.html  package.json  vite.config.ts
crates/nodadark-desktop/src/: App.svelte  app.css
crates/nodadark-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/nodadark-desktop/src-tauri/src/: engine_bridge.rs  main.rs
crates/nodadark-desktop/src-tauri/src/commands/: mod.rs  proxy.rs  replay.rs  requests.rs
crates/nodadark-desktop/src/lib/api/: tauri.ts
crates/nodadark-desktop/src/lib/components/: CookieEditor.svelte  HexViewer.svelte  RequestDetail.svelte  RequestList.svelte
crates/nodadark-desktop/src/lib/stores/: proxyStore.ts
crates/nodadark-engine/: Cargo.toml
crates/nodadark-engine/src/: lib.rs  main.rs
crates/nodadark-engine/src/api/: mod.rs  protocol.rs  server.rs
crates/nodadark-engine/src/proxy/: cert.rs  mod.rs  server.rs
crates/nodadark-engine/src/rules/: mod.rs
crates/nodadark-engine/src/storage/: mod.rs
crates/nodadark-tui/: Cargo.toml
crates/nodadark-tui/src/: app.rs  events.rs  main.rs  network.rs  state.rs  ui.rs
docs/: README.md
