[package]
name    = "nodadark-engine"
version = "0.1.0"
edition = "2021"
description = "NodaDark — Core MITM Proxy Engine"

[lib]
name = "nodadark_engine"
path = "src/lib.rs"

[[bin]]
name = "nodadark"
path = "src/main.rs"

[dependencies]
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP proxy
hyper          = { version = "0.14", features = ["full"] }
hyper-rustls   = { version = "0.24", features = ["http1", "http2"] }

# TLS
rustls         = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls   = "0.24"
rustls-pemfile = "1"

# Certificate generation
rcgen          = "0.12"
x509-parser    = "0.15"

# Utils
bytes          = "1"
futures        = "0.3"
uuid           = { version = "1", features = ["v4"] }
chrono         = { version = "0.4", features = ["serde"] }
dashmap        = "5"
toml           = "0.8"
dirs           = "5"
base64         = "0.21"
