[package]
name    = "nodadark-tui"
version = "0.1.0"
edition = "2026"
description = "NodaDark — Interface Terminal (TUI)"

[[bin]]
name = "nodadark-tui"
path = "src/main.rs"

[dependencies]
nodadark-engine = { path = "../nodadark-engine" }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }

ratatui    = "0.26"
crossterm  = { version = "0.27", features = ["event-stream"] }
clap       = { version = "4", features = ["derive"] }

# Pour l'affichage hex
hex        = "0.4"
# Pour le JSON formaté
